# NutriSastho-AI

./: .dockerignore  .env  .env.docker.example  .env.example  .gitignore  .gitmodules  README.md  docker-compose.prod.yml  package-lock.json  package.json  render.yaml  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  check_schema.py  docker-compose.yaml  pyproject.toml  test_api.py
backend/docker_data/: postmaster.pid
backend/docker_data/base/1/: 2619  2619_vm  2696  2840  2841
backend/docker_data/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  13468  16388  16392  16393  16395  16396  16401  16402  16409  24582  24585  24587  24593  24600  2579  2604  2606  2608  2608_fsm  2610  2610_fsm  2619  2620  2656  2657  2658  2659  2662  2663  (+20 more)
backend/docker_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
backend/docker_data/pg_xact/: 0000
backend/migrations/: env.py
backend/migrations/versions/: 56622456a6dd_add_health_profiles_table.py  a1b2c3d4e5f6_add_exercise_plans_table.py  aa0477a874d7_update_user_table_with_full_name_blood_.py  b4d9c2e1a8f0_add_clinics_table.py  ce7c2526999e_create_user_table.py  d1f85a3133f5_add_fooditem.py  f8c1a2b9d4e0_add_user_location_and_budget_plans.py
backend/scripts/: cleanup_old_data.py  sync_deployment_db.py
backend/src/backend/: app.py  config.py  database.py  server.py  uuid_compat.py
mcp_99bugsincode/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  test_rag.py  test_rag_2.py
mcp_99bugsincode/src/mcp_99bugsincode/: __init__.py  app.py  backend_integration.py  dependencies.py  health_risk.py  logger.py  main.py  meal_plan.py  prompts.py  rag.py  resources.py  schemas.py
(+143 files in other folders)
