[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jobaer Tamim", email = "jobaertamim7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.46.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "bcrypt>=5.0.0",
    "jwt>=1.4.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
