[project]
name = "mcp-99bugsincode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jobaer Tamim", email = "jobaertamim7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-99bugsincode = "mcp_99bugsincode:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
